--- a/overlay/packages/apps/Launcher2/res/layout/all_apps.xml
+++ b/overlay/packages/apps/Launcher2/res/layout/all_apps.xml
@@ -25,6 +25,7 @@
     
     >
     <GridView android:id="@+id/all_apps_2d_grid"
+        android:tag="all_apps_2d_grid"
         android:scrollbars="none"
         android:drawSelectorOnTop="false"
         android:listSelector="@drawable/grid_selector"
@@ -41,6 +42,7 @@
         />
 
     <ImageButton android:id="@+id/all_apps_2d_home"
+        android:tag="all_apps_2d_home"
         android:src="@drawable/home_button"
         android:background="#00000000"
         android:layout_centerHorizontal="true"
