--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -20,7 +20,7 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
-    <!-- The Sapphire 2d accelerator can't do an alpha transformation of
+    <!-- The 2d accelerator can't do an alpha transformation of
          a surface with an alpha channel, so enable this special mode
          to avoid going into software rendering. -->
     <bool name="config_sf_limitedAlpha">true</bool>
